# lit-mux

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_client.py
docs/: MEMORY_LEAK_FIX.md  README.md  TESTING.md
scripts/: README.md  monitor_resources.py
src/lit_mux/: __init__.py  cli.py  server.py
src/lit_mux/api/: server.py
src/lit_mux/backends/: __init__.py  ollama.py
src/lit_mux/core/: __init__.py  config.py  router.py  session.py
src/lit_mux/services/: __init__.py  mcp.py  mcp_client.py  prompt_composer.py  storage.py  tool_processor.py
tests/: 01-health.http  02-sessions.http  03-messaging.http  04-broadcast.http  05-edge-cases.http  06-client-examples.http  07-model-selection.http  README.md
tests/integration/: README.md
tests/performance/: README.md  stress_test_mcp.py  test_leak_fix.py  test_leak_simple.py
