[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lit-mux"
version = "0.1.0"
description = "Multi-AI multiplexer with REST API"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ben Vierck", email = "ben@lit.ai"},
    {name = "Claude", email = "claude@anthropic.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",
    "click>=8.1.0",
    "rich>=13.0.0",
    "toml>=0.10.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
claude = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]
openai = [
    "openai>=1.3.0",
]
ollama = [
    "ollama>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Positronic-AI/lit-mux"
Documentation = "https://github.com/Positronic-AI/lit-mux#readme"
Repository = "https://github.com/Positronic-AI/lit-mux"
"Bug Reports" = "https://github.com/Positronic-AI/lit-mux/issues"

[project.scripts]
lit-mux = "lit_mux.cli:main"
lit-mux-server = "lit_mux.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lit_mux"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ollama = [
    "ollama>=0.1.0",
    "aiofiles>=23.0.0",
]